--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@remix-run/netlify": "^1.6.5",
     "@remix-run/node": "^1.6.5",
     "@remix-run/react": "^1.6.5",
+    "@styled-icons/boxicons-logos": "^10.38.0",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.5",
